@@ -9,3 +9,7 @@ package-name = ftw.publisher.core
 [test]
 eggs +=
     plonetheme.onegov
+
+[versions]
+# Products.PloneFormGen >= 1.8 is incompatible with Plone <= 5.x
+Products.PloneFormGen = 1.7.12
