@@ -5,6 +5,9 @@ Changelog
 2.6.1 (unreleased)
 ------------------
 
+- Add data collector for Products.PloneFormGen fields.
+  [elioschmutz]
+
 - Add data collector for ftw.servicenavigation data. [jone]
 
 
